files/manifests/monitoring/rpi-exporter.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: rpi-exporter
  namespace: monitoring
  labels:
    app: rpi-exporter
spec:
  selector:
    matchLabels:
      app: rpi-exporter
  template:
    metadata:
      labels:
        app: rpi-exporter
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      hostNetwork: true
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 44
      containers:
        - name: rpi-exporter
          image: jovalle/rpi-exporter:v0.7.1
          imagePullPolicy: Always
          securityContext:
            privileged: true
          ports:
            - name: metrics
              containerPort: 9243
              hostPort: 9243
          resources:
            limits:
              cpu: 50m
              memory: 200Mi
            requests:
              cpu: 10m
              memory: 100Mi
          volumeMounts:
            - mountPath: /usr
              mountPropagation: HostToContainer
              name: usr
              readOnly: true
      volumes:
        - hostPath:
            path: /usr
          name: usr
---
kind: Service
apiVersion: v1
metadata:
  name: rpi-exporter
  namespace: monitoring
  labels:
    app: rpi-exporter
spec:
  clusterIP: None
  ports:
    - name: metrics
      port: 9243
      targetPort: metrics
  selector:
    app: rpi-exporter
